<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@color/blue">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:src="@drawable/ic_icon"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintTop_toBottomOf="@id/image"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_50sdp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:hint="@string/employeeEmail"
        app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emilET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/numberTextInputLayout"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/rememberMyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
android:textSize="@dimen/_16ssp"

        android:text="@string/rememberMe"/>
    <Switch
        android:id="@+id/rememberMy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@id/rememberMyTV"
        android:layout_marginEnd="@dimen/_20sdp"
        app:track="@drawable/track"
android:checked="false"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/loginBtn"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/rememberMyTV"
        android:backgroundTint="@color/blue"
        android:layout_marginHorizontal="@dimen/_30sdp"
        app:cornerRadius = "20dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>