<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="تقديم طلب "
            android:id="@+id/text"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/_30ssp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/blue"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tittleTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:hint="@string/tittle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:boxStrokeColor="@color/blue"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tittleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/decorationTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/decoration"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/tittleTextInputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/problemperson"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/decorationTextInputLayout"
          >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/personET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/location"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personTextInputLayout"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationET"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/attachmentsLout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            app:layout_constraintTop_toBottomOf="@id/locationTextInputLayout"
            android:background="@drawable/attachments_shape"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_20sdp"

            android:layout_marginTop="@dimen/_10sdp">

            <ImageView
                android:id="@+id/imgJobs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_camera"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"

                android:scaleType="center"

                android:background="@drawable/shape_camera"
                />
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="match_parent"
                android:textSize="@dimen/_15ssp"
                android:text="ادراج مرفقات"
                android:gravity="center"

                />


        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/button_backgroundl"
            android:drawableStart="@drawable/ic_shared"
            android:drawableTint="@color/blue"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/Submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attachmentsLout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>



